--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,9 @@
     "supertest": "^6.3.3",
     "typescript": "^5.8.3"
   },
+  "engines": {
+  "node": "18.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
