--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=3001
 MONGODB_URI=mongodb+srv://khatrinikhil015:Nkk87656@dashboardproject.rec0lyh.mongodb.net/fraud_detection?retryWrites=true&w=majority&appName=dashboardProject
 FRONTEND_URL=fraud-transaction-detection-dash-git-ab0c19-nikk-hhils-projects.vercel.app
-ML_SERVICE_URL=http://localhost:8000
+ML_SERVICE_URL=https://ml-service-sf3r.onrender.com
 NODE_ENV=development
