--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "pg": "^8.11.3",
     "socket.io": "^4.8.1",
@@ -32,7 +33,7 @@
     "typescript": "^5.8.3"
   },
   "engines": {
-  "node": "18.x"
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
